<resources>
    <string name="app_name">HackQuiz</string>
    <string name="name">Name</string>
    <string name="number">Id</string>
    <string name="course">Course (ex: MEEC)</string>
    <string name="email">Email</string>
    <string name="start">Start</string>
    <string name="person_icon">Person icon</string>
    <string name="student_icon">Student icon</string>
    <string name="mail_icon">Mail icon</string>
    <string name="URL">http://hackerschool.io:8080</string>
    <string name="welcome_text">Welcome to the HackerSchool HackQuick. Rules are simple: if you get more right answers in less time you get the reward. Enter your details above and let\'s go!</string>
</resources>
